--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header-content">
             <!-- Logo Section -->
             <div class="logo">
-                 <img class="ttr4" src="images/png-clipart-logo-company-business-creative-company-logo-free-logo-design-template-company.png" width="135px" height="55px" alt="School Project Fairness Logo" draggable="false">
+                 <img class="ttr4" src="Images/png-clipart-logo-company-business-creative-company-logo-free-logo-design-template-company.png" width="135px" height="55px" alt="School Project Fairness Logo" draggable="false">
             </div>
 
             <!-- Navigation Menu -->
@@ -240,7 +240,7 @@
         
         <div class="service-item">
             <div class="service-item-img">
-                <img class="klo" src="images/IMG-20240916-WA0035.jpg" alt="Teamwork image" draggable="false"/>
+                <img class="klo" src="Images/IMG-20240916-WA0035.jpg" alt="Teamwork image" draggable="false"/>
             </div>
             <ul class="service-bullets">
                 <li class="active"></li>
@@ -341,7 +341,7 @@
             <div class="testimonial-content">
                 <div class="testimonial-item">
                     <div class="testimonial-toplayer">
-                        <img class="lol" src="images/images (1).jpg" width="70px" height="70px" alt="Testimonial from School" draggable="false"/>
+                        <img class="lol" src="Images/images (1).jpg" width="70px" height="70px" alt="Testimonial from School" draggable="false"/>
                         <h3>Shahad Hussein</h3>
                         <span>Principal, ABC School</span>
                     </div> <!-- /testimonial-toplayer -->
@@ -350,7 +350,7 @@
 
                 <div class="testimonial-item">
                     <div class="testimonial-toplayer">
-                        <img class="lol" src="images/images.jpg" width="70px" height="70px" alt="Testimonial from School" draggable="false"/>
+                        <img class="lol" src="Images/images.jpg" width="70px" height="70px" alt="Testimonial from School" draggable="false"/>
                         <h3>Ismail Muhammad</h3>
                         <span>Teacher, XYZ Academy</span>
                     </div>
@@ -371,7 +371,7 @@
         <div class="team-content">
             <div class="team-item">
                 <div class="team-img">
-                    <img src="images/images (1).jpg" width="185px" height="185px" alt="Team Member" draggable="false"/>
+                    <img src="Images/images (1).jpg" width="185px" height="185px" alt="Team Member" draggable="false"/>
                     <div class="team-overlay">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -386,7 +386,7 @@
 
             <div class="team-item mg">
                 <div class="team-img">
-                    <img src="images/images.jpg" width="185px" height="185px" alt="Team Member" draggable="false"/>
+                    <img src="Images/images.jpg" width="185px" height="185px" alt="Team Member" draggable="false"/>
                     <div class="team-overlay">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -401,7 +401,7 @@
 
             <div class="team-item">
                 <div class="team-img">
-                    <img src="images/images (2).jpg" width="185px" height="185px" alt="Team Member" draggable="false"/>
+                    <img src="Images/images (2).jpg" width="185px" height="185px" alt="Team Member" draggable="false"/>
                     <div class="team-overlay">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -427,7 +427,7 @@
         <div class="blog-content">
             <div class="blog-item">
                 <div class="blog-item-img">
-                    <img class="img66" src="images/IMG-20240916-WA0026.jpg" alt="Blog Post Image" title="Blog Post" draggable="false"/>
+                    <img class="img66" src="Images/IMG-20240916-WA0026.jpg" alt="Blog Post Image" title="Blog Post" draggable="false"/>
                 </div> <!-- ./blog-item-img -->
                 <div class="blog-info">
                     <ul class="blog-list">
@@ -443,7 +443,7 @@
             
             <div class="blog-item mg">
                 <div class="blog-item-img">
-                    <img class="img66" src="images/IMG-20240916-WA0028.jpg" alt="Blog Post Image" title="Blog Post" draggable="false"/>
+                    <img class="img66" src="Images/IMG-20240916-WA0028.jpg" alt="Blog Post Image" title="Blog Post" draggable="false"/>
                 </div> <!-- ./blog-item-img -->
                 <div class="blog-info">
                     <ul class="blog-list">
@@ -478,7 +478,7 @@
 
 <!-- 3.11 FOOTER SECTION - Footer........................................................................... -->
 <div class="footer">
-    <img class="mmg" src="images/png-clipart-logo-company-business-creative-company-logo-free-logo-design-template-company.png" alt="Company Logo" draggable="false">
+    <img class="mmg" src="Images/png-clipart-logo-company-business-creative-company-logo-free-logo-design-template-company.png" alt="Company Logo" draggable="false">
     <ul class="footer-links">
         <li><a href="#" aria-label="Facebook"><i class="fa fa-facebook"></i></a></li>
         <li><a href="#" aria-label="Twitter"><i class="fa fa-twitter"></i></a></li>
